# quake-fibre

./: LICENSE  README.md  pyproject.toml  references.bib  requirements.txt
config/: earthquake_oaxaca.ini  fibre_curie.ini  pacific_response.csv  parameters.ini  signal_continuous.ini  transceiver_curie.ini
scripts/: demo_earthquake.ipynb  demo_earthquake_fibre.ipynb  demo_end_to_end.py  demo_end_to_end_cuda.py  demo_fibre.ipynb  demo_scramblers_Jones_matrix.ipynb  demo_scramblers_drift.ipynb  demo_strain.ipynb  demo_transmission.ipynb  demo_waveplate.ipynb  seismograms_projected_100.0m_0.25s.csv  seismograms_world_100.0m_0.25s.csv
src/quakefibre/: constants.py  drift.py  earthquake_terrestrial.py  fibre.py  fibre_coarse_step.py  filter.py  perturbation_event.py  pulse.py  scramblers.py  thread_pool_executor.py  transceiver.py
src/tremor_waveplate_toolbox/: __init__.py  channel.py  constants.py  constellation.py  earthquake.py  earthquake_submarine.py  earthquake_terrestrial.py  fibre.py  fibre_cnlse.py  fibre_coarse_step.py  fibre_marcuse.py  path.py  perturbation.py  perturbation_event.py  pulse.py  receiver.py  sampling.py  scramblers.py  setup_cuda_local_path.py  signal.py  transceiver.py  transmitter.py  utilities.py  utils.py  waveplate.py
tests/: pytest.toml  test_constellation.py  test_earthquake.py  test_fibre.py  test_filter.py  test_pulse.py  test_signal.py  test_transceiver.py  test_waveplate.py
